--- a/package.json
+++ b/package.json
@@ -7,26 +7,46 @@
   "author": "thondery <thondery@163.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "npm run fix && nuxt build",
+    "dev": "npm run fix && nuxt",
     "dev:server": "npm run fix && backpack dev",
     "build": "npm run fix && nuxt build && backpack build",
     "fix": "node .fix"
   },
   "dependencies": {
+    "connect-redis": "^3.4.1",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "element-ui": "^2.10.0",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "kenote-config-helper": "^1.0.1",
+    "express-session": "^1.16.2",
+    "jsonwebtoken": "^8.5.1",
+    "kenote-config-helper": "/Users/thondery/workspace/github/kenote/config-helper",
     "kenote-express-helper": "^1.1.1",
+    "method-override": "^3.0.0",
+    "nunjucks": "^3.2.0",
     "nuxt": "^2.8.1",
     "nuxt-property-decorator": "^2.3.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "ts-node": "^8.3.0"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.8.1",
+    "@types/connect-redis": "^0.0.10",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/cors": "^2.8.5",
+    "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.17.0",
+    "@types/express-session": "^1.15.13",
     "@types/fs-extra": "^8.0.0",
     "@types/js-yaml": "^3.12.1",
+    "@types/jsonwebtoken": "^8.3.2",
+    "@types/method-override": "^0.0.31",
     "@types/node": "^12.0.10",
+    "@types/nunjucks": "^3.1.1",
+    "@types/passport": "^1.0.0",
+    "@types/passport-jwt": "^3.0.1",
     "@types/validator": "^10.11.1",
     "@types/webpack-env": "^1.13.9",
     "awesome-typescript-loader": "^5.2.1",
