update package info .

--- a/.fix/setting.yml
+++ b/.fix/setting.yml
@@ -4,11 +4,12 @@
 replace:
   - name: '@nuxt/vue-app'
     file: node_modules/@nuxt/vue-app/types/index.d.ts
-    find: |-
-      export interface NuxtApp extends Vue
-    content: |-
-      interface NuxtAppAnyLoading extends Vue {
-        $loading: any
-      }
+    exec:
+      - find: |-
+          export interface NuxtApp extends Vue
+        content: |-
+          interface NuxtAppAnyLoading extends Vue {
+            $loading: any
+          }
 
-      export interface NuxtApp extends NuxtAppAnyLoading
+          export interface NuxtApp extends NuxtAppAnyLoading
