--- a/package.json
+++ b/package.json
@@ -7,64 +7,77 @@
   "author": "thondery <thondery@163.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "npm run fix && backpack dev",
+    "dev": "backpack dev",
     "build": "npm run fix && nuxt build && backpack build",
+    "start": "node ./build/index.js",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "task": "ts-node --project server/tsconfig.json tools/task.ts",
+    "initialize": "ts-node --project server/tsconfig.json tools/initialize.ts",
     "fix": "ts-node --project server/tsconfig.json .fix/index.ts"
   },
   "dependencies": {
-    "connect-redis": "^3.4.1",
+    "@alicloud/pop-core": "^1.7.7",
+    "add": "^2.0.6",
+    "axios": "^0.19.0",
+    "connect-redis": "^3.4.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "element-ui": "^2.10.0",
+    "element-ui": "2.11.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "file-saver": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
-    "kenote-config-helper": "^1.0.3",
+    "kenote-config-helper": "^1.0.5",
     "kenote-express-helper": "^1.1.1",
-    "kenote-mailer-helper": "^1.1.2",
-    "kenote-mongoose-helper": "^1.1.1",
-    "kenote-store-helper": "^1.1.1",
-    "kenote-task-helper": "^1.1.0",
+    "kenote-mailer-helper": "^1.1.3",
+    "kenote-mongoose-helper": "^1.1.2",
+    "kenote-socket-helper": "^1.1.1",
+    "kenote-store-helper": "^1.1.2",
+    "kenote-task-helper": "^1.1.1",
     "kenote-validate-helper": "^1.1.0",
+    "log4js": "^4.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.6.4",
+    "mongoose": "^5.6.6",
     "nunjucks": "^3.2.0",
     "nuxt": "^2.8.1",
     "nuxt-property-decorator": "^2.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "ts-node": "^8.3.0",
-    "ts-optchain": "^0.1.7"
+    "ts-optchain": "^0.1.7",
+    "tty-table": "2.7.0",
+    "vue-fragment": "^1.5.1",
+    "yarn": "^1.17.3"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.8.1",
-    "@types/bluebird": "^3.5.27",
+    "@types/bytes": "^3.0.0",
     "@types/connect-redis": "^0.0.10",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.5",
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.13",
-    "@types/fs-extra": "^8.0.0",
-    "@types/inquirer": "^6.0.3",
-    "@types/js-yaml": "^3.12.1",
+    "@types/file-saver": "^2.0.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.136",
     "@types/method-override": "^0.0.31",
-    "@types/mongoose": "^5.5.7",
-    "@types/node": "^12.0.10",
+    "@types/mongoose": "^5.5.11",
+    "@types/nodemailer": "^6.2.1",
     "@types/nunjucks": "^3.1.1",
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
-    "@types/validator": "^10.11.1",
-    "@types/webpack-env": "^1.13.9",
+    "@types/uuid": "^3.4.5",
+    "@types/validator": "^10.11.2",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-plugin-component": "^1.1.1",
     "backpack-core": "^0.8.4",
-    "typescript": "^3.5.2",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3",
     "vuepress": "^1.0.2"
   },
   "engines": {
