--- a/data/console/index.default.yml
+++ b/data/console/index.default.yml
@@ -5,11 +5,11 @@
 # 用户入口
 userEntrance      :
   - name              : 基本资料
-    command           : router:/console/accout/baseinfo
+    command           : router:/account/baseinfo
   - name              : 实名认证
     command           : 
   - name              : 安全设置
-    command           : router:/console/account/security
+    command           : router:/account/security
   - name              : 我的主页
     command           : 
   - name              : 我的收藏
