--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "connect-redis": "^3.4.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "element-ui": "2.11.1",
+    "element-ui": "~2.11.*",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
@@ -41,7 +41,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.6.6",
     "nunjucks": "^3.2.0",
-    "nuxt": "^2.8.1",
+    "nuxt": "~2.8.*",
     "nuxt-property-decorator": "^2.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
