--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "@alicloud/pop-core": "^1.7.7",
     "add": "^2.0.6",
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "connect-redis": "^3.4.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "echarts": "^4.2.1",
     "element-ui": "~2.11.*",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
@@ -48,6 +50,8 @@
     "ts-node": "^8.3.0",
     "ts-optchain": "^0.1.7",
     "tty-table": "2.7.0",
+    "v-charts": "^1.19.0",
+    "vue-amap": "^0.5.10",
     "vue-fragment": "^1.5.1",
     "yarn": "^1.17.3"
   },
