update footer by homepage.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "kenote-task-helper": "^1.1.1",
     "kenote-validate-helper": "^1.1.0",
     "log4js": "^4.5.1",
+    "markdown-it": "^10.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.6.6",
     "nunjucks": "^3.2.0",
@@ -67,6 +68,7 @@
     "@types/file-saver": "^2.0.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.136",
+    "@types/markdown-it": "^0.0.8",
     "@types/method-override": "^0.0.31",
     "@types/mongoose": "^5.5.11",
     "@types/nodemailer": "^6.2.1",
@@ -74,7 +76,7 @@
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
     "@types/uuid": "^3.4.5",
-    "@types/validator": "^10.11.2",
+    "@types/validator": "^10.11.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-plugin-component": "^1.1.1",
     "backpack-core": "^0.8.4",
