--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nuxt-property-decorator": "^2.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "runscript": "^1.4.0",
     "ts-node": "^8.3.0",
     "ts-optchain": "^0.1.7",
     "tty-table": "2.7.0",
@@ -66,6 +67,8 @@
     "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.13",
     "@types/file-saver": "^2.0.1",
+    "@types/fs-extra": "^8.0.0",
+    "@types/inquirer": "^6.5.0",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.136",
     "@types/markdown-it": "^0.0.8",
@@ -75,6 +78,7 @@
     "@types/nunjucks": "^3.1.1",
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
+    "@types/url-parse": "^1.4.3",
     "@types/uuid": "^3.4.5",
     "@types/validator": "^10.11.3",
     "awesome-typescript-loader": "^5.2.1",
