add ucenter:group ...

--- a/data/errors/code/index.default.yml
+++ b/data/errors/code/index.default.yml
@@ -12,6 +12,7 @@ ERROR_AUTH_OPERATE_GROUP_NULL    : 1005
 ERROR_NOT_FOUND_CHANNEL          : 1006
 ERROR_NOT_FOUND_API              : 1007
 ERROR_NOT_FOUND_ACCESSKEY        : 1008
+ERROR_ONLY_ADVANCED_ADMIN        : 1009
 
 ERROR_UPLOAD_FILE_MIMETYPE       : 1101
 ERROR_UPLOAD_FILESIZE_LARGEMAX   : 1102
