--- a/data/errors/message/zh-cn/index.default.yml
+++ b/data/errors/message/zh-cn/index.default.yml
@@ -12,6 +12,7 @@ ERROR_AUTH_OPERATE_GROUP_NULL    : '要操作的用户组不存在'
 ERROR_NOT_FOUND_CHANNEL          : '没找到 channel 配置'
 ERROR_NOT_FOUND_API              : '没找到 api 接口'
 ERROR_NOT_FOUND_ACCESSKEY        : '没找到 %s 的密钥'
+ERROR_ONLY_ADVANCED_ADMIN        : '只有高级管理员才能操作'
 
 ERROR_UPLOAD_FILE_MIMETYPE       : '上传文件类型不许可. [%s]'
 ERROR_UPLOAD_FILESIZE_LARGEMAX   : '上传文件超过最大值 %s.'
