--- a/data/flags/index.default.yml
+++ b/data/flags/index.default.yml
@@ -6,3 +6,16 @@
 '/account/baseinfo':
   # 访问权限
   access          : 1000
+'/account/plan':
+  # 访问权限
+  access          : 1000
+
+'/ucenter/group':
+  # 访问权限
+  access          : 9998
+  # 列表
+  list            : 8000
+  # 创建
+  create          : 9998
+  # 编辑
+  edit            : 9998
