--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "echarts": "^4.2.1",
-    "element-ui": "~2.11.*",
+    "element-ui": "^2.12.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
