--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "express-session": "^1.16.2",
     "file-saver": "^2.0.2",
     "jsonwebtoken": "^8.5.1",
-    "kenote-config-helper": "^1.0.5",
+    "kenote-config-helper": "^1.0.6",
     "kenote-express-helper": "^1.1.1",
     "kenote-mailer-helper": "^1.1.3",
     "kenote-mongoose-helper": "^1.1.2",
@@ -55,6 +55,7 @@
     "v-charts": "^1.19.0",
     "vue-amap": "^0.5.10",
     "vue-fragment": "^1.5.1",
+    "vue-router": "3.0.6",
     "yarn": "^1.17.3"
   },
   "devDependencies": {
@@ -68,7 +69,7 @@
     "@types/express-session": "^1.15.13",
     "@types/file-saver": "^2.0.1",
     "@types/fs-extra": "^8.0.0",
-    "@types/inquirer": "^6.5.0",
+    "@types/inquirer": "6.0.3",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.136",
     "@types/markdown-it": "^0.0.8",
