--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect-redis": "^3.4.2",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "dayjs": "^1.8.16",
     "echarts": "^4.2.1",
     "element-ui": "^2.12.0",
     "errorhandler": "^1.5.1",
