--- a/data/flags/index.default.yml
+++ b/data/flags/index.default.yml
@@ -19,3 +19,41 @@
   create          : 9998
   # 编辑
   edit            : 9998
+  # 删除
+  remove          : 9998
+
+'/ucenter/user':
+  # 访问权限
+  access          : 9000
+  # 列表
+  list            : 9000
+  # 创建
+  create          : 9000
+  # 编辑
+  edit            : 9000
+  # 删除
+  remove          : 9000
+
+'/ucenter/ticket':
+  # 访问权限
+  access          : 9998
+  # 列表
+  list            : 9998
+  # 创建
+  create          : 9998
+  # 编辑
+  edit            : 9998
+  # 删除
+  remove          : 9998
+
+'/ucenter/team':
+  # 访问权限
+  access          : 9000
+  # 列表
+  list            : 9000
+  # 创建
+  create          : 9000
+  # 编辑
+  edit            : 9000
+  # 删除
+  remove          : 9000
