--- a/data/errors/code/index.default.yml
+++ b/data/errors/code/index.default.yml
@@ -13,6 +13,7 @@ ERROR_NOT_FOUND_CHANNEL          : 1006
 ERROR_NOT_FOUND_API              : 1007
 ERROR_NOT_FOUND_ACCESSKEY        : 1008
 ERROR_ONLY_ADVANCED_ADMIN        : 1009
+ERROR_AUTH_OPERATE_USER_NULL     : 1010
 
 ERROR_UPLOAD_FILE_MIMETYPE       : 1101
 ERROR_UPLOAD_FILESIZE_LARGEMAX   : 1102
@@ -45,6 +46,7 @@ ERROR_VALID_GROUP_NOTEXIST       : 1419
 ERROR_VALID_DATE_REQUIRED        : 1420
 ERROR_VALID_DATE_FORMAT          : 1421
 ERROR_VALID_NAME_REQUIRED        : 1422
+ERROR_VALID_NAME_FORMAT          : 1423
 
 ERROR_VERIFY_EMAIL_TIMEOUT       : 1451
 ERROR_VERIFY_EMAIL_FAILED        : 1452
