--- a/data/errors/message/zh-cn/index.default.yml
+++ b/data/errors/message/zh-cn/index.default.yml
@@ -13,6 +13,7 @@ ERROR_NOT_FOUND_CHANNEL          : '没找到 channel 配置'
 ERROR_NOT_FOUND_API              : '没找到 api 接口'
 ERROR_NOT_FOUND_ACCESSKEY        : '没找到 %s 的密钥'
 ERROR_ONLY_ADVANCED_ADMIN        : '只有高级管理员才能操作'
+ERROR_AUTH_OPERATE_USER_NULL     : '要操作的用户不存在'
 
 ERROR_UPLOAD_FILE_MIMETYPE       : '上传文件类型不许可. [%s]'
 ERROR_UPLOAD_FILESIZE_LARGEMAX   : '上传文件超过最大值 %s.'
@@ -44,7 +45,8 @@ ERROR_VALID_GROUP_REQUIRED       : '用户组不能为空'
 ERROR_VALID_GROUP_NOTEXIST       : '用户组不存在'
 ERROR_VALID_DATE_REQUIRED        : '%s不能为空'
 ERROR_VALID_DATE_FORMAT          : '%s格式错误，非日期格式'
-ERROR_VALID_NAME_REQUIRED        : '%s名称不能为空'
+ERROR_VALID_NAME_REQUIRED        : '%s不能为空'
+ERROR_VALID_NAME_FORMAT          : '%s格式错误，不是正确的%s的格式'
 
 ERROR_VERIFY_EMAIL_TIMEOUT       : '邮箱验证超时'
 ERROR_VERIFY_EMAIL_FAILED        : '邮箱验证失败'
