--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "file-saver": "^2.0.2",
+    "is-blob": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
-    "kenote-config-helper": "^1.0.6",
+    "kenote-config-helper": "^1.0.8",
     "kenote-express-helper": "^1.1.1",
     "kenote-mailer-helper": "^1.1.3",
     "kenote-mongoose-helper": "^1.1.2",
@@ -57,8 +58,8 @@
     "vue-amap": "^0.5.10",
     "vue-codemirror": "^4.0.6",
     "vue-fragment": "^1.5.1",
-    "vue-router": "3.0.6",
-    "yarn": "^1.17.3"
+    "vue-router": "^3.1.3",
+    "xlsx": "^0.15.1"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.8.1",
@@ -73,6 +74,7 @@
     "@types/file-saver": "^2.0.1",
     "@types/fs-extra": "^8.0.0",
     "@types/inquirer": "6.0.3",
+    "@types/js-yaml": "^3.12.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/lodash": "^4.14.136",
     "@types/markdown-it": "^0.0.8",
