--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "dev": "backpack dev",
     "build": "npm run fix && nuxt build && backpack build",
     "start": "node ./build/index.js",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
     "task": "ts-node --project server/tsconfig.json tools/task.ts",
     "initialize": "ts-node --project server/tsconfig.json tools/initialize.ts",
     "fix": "ts-node --project server/tsconfig.json .fix/index.ts"
@@ -28,19 +26,20 @@
     "echarts": "^4.2.1",
     "element-ui": "^2.12.0",
     "errorhandler": "^1.5.1",
+    "es6-promisify": "^6.0.2",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "file-saver": "^2.0.2",
     "is-blob": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "kenote-config-helper": "^1.0.8",
-    "kenote-express-helper": "^1.1.1",
+    "kenote-express-helper": "^1.1.2",
     "kenote-mailer-helper": "^1.1.3",
     "kenote-mongoose-helper": "^1.1.2",
     "kenote-socket-helper": "^1.1.1",
     "kenote-store-helper": "^1.1.2",
-    "kenote-task-helper": "^1.1.1",
     "kenote-validate-helper": "^1.1.0",
+    "localforage": "^1.7.3",
     "log4js": "^4.5.1",
     "markdown-it": "^10.0.0",
     "method-override": "^3.0.0",
@@ -54,6 +53,7 @@
     "ts-node": "^8.3.0",
     "ts-optchain": "^0.1.7",
     "tty-table": "2.7.0",
+    "url-parse": "^1.4.7",
     "v-charts": "^1.19.0",
     "vue-amap": "^0.5.10",
     "vue-codemirror": "^4.0.6",
@@ -69,6 +69,7 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.5",
     "@types/errorhandler": "^0.0.32",
+    "@types/es6-promisify": "^6.0.0",
     "@types/express": "^4.17.0",
     "@types/express-session": "^1.15.13",
     "@types/file-saver": "^2.0.1",
@@ -90,11 +91,11 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-plugin-component": "^1.1.1",
     "backpack-core": "^0.8.4",
+    "kenote-task-helper": "^1.1.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "tslint": "^5.18.0",
-    "typescript": "^3.5.3",
-    "vuepress": "^1.0.2"
+    "typescript": "^3.5.3"
   },
   "engines": {
     "node": ">8.0.0"
